# MVP-dml

./: HUB.env  app (33).py  app.py  cultivos.json  descargar_ndvi.py  pyproject (1).toml  pyproject.toml  requirements.txt
