[project]
name = "agtech-risk-detector"
version = "0.1.0"
description = "Prototipo Streamlit para evaluación de riesgo agrícola"
authors = ["Diego Molestina"]
dependencies = [
  "folium>=0.20.0",
  "pandas>=2.3.1",
  "streamlit-folium>=0.25.0",
  "streamlit>=1.47.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "sentinelhub>=3.10.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
