[project]
name = "agtech"  # Puedes poner cualquier nombre, solo que no tenga caracteres especiales ni espacios
version = "0.1.0"
description = ""
authors = ["Diego Molestina <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.47.0",
    "pandas>=2.3.1",
    "folium>=0.20.0",
    "streamlit-folium>=0.25.0",
    "requests>=2.31.0"
]
